fixed broken images link

--- a/services/facility-management.html
+++ b/services/facility-management.html
@@ -62,13 +62,13 @@
     </script>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180"
-        href="resources/Pharmich logo variants svg/favicon_io/apple-touch-icon.png">
+        href="../resources/Pharmich logo variants svg/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-        href="resources/Pharmich logo variants svg/favicon_io/favicon-32x32.png">
+        href="../resources/Pharmich logo variants svg/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-        href="resources/Pharmich logo variants svg/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="resources/Pharmich logo variants svg/favicon_io/site.webmanifest.json">
-    <link rel="mask-icon" href="resources/Pharmich logo variants svg/favicon_io/favicon.ico" color="#128C4C">
+        href="../resources/Pharmich logo variants svg/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../resources/Pharmich logo variants svg/favicon_io/site.webmanifest.json">
+    <link rel="mask-icon" href="../resources/Pharmich logo variants svg/favicon_io/favicon.ico" color="#128C4C">
     <meta name="msapplication-TileColor" content="#128C4C">
     <meta name="theme-color" content="#128C4C">
 </head>
@@ -101,9 +101,9 @@
         <header class="main-header">
             <div class="header-container">
                 <a href="home.html" class="logo">
-                    <img src="resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
+                    <img src="../resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
                         class="logo-img dark-mode-logo">
-                    <img src="resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
+                    <img src="../resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
                         class="logo-img light-mode-logo">
                 </a>
                 <nav class="main-nav" aria-label="Main">
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="service-hero-image">
-                    <img src="/api/placeholder/600/400"
+                    <img src="../resources/consultation.jpg"
                         alt="Professional facility management team monitoring building systems" class="hero-img">
                     <div class="service-hero-overlay">
                         <div class="overlay-item">
@@ -311,7 +311,7 @@
                                 operational efficiency, and focus on your core business activities.</p>
                         </div>
                         <div class="overview-image">
-                            <img src="/api/placeholder/500/300"
+                            <img src="../resources/industrial cleaning professional.jpg"
                                 alt="Facility manager reviewing maintenance dashboard on tablet" class="floating-image">
                             <div class="image-tag">
                                 <div class="tag-icon"><i class="fas fa-check-circle"></i></div>
@@ -637,7 +637,7 @@
                             </div>
                         </div>
                         <div class="case-study-image">
-                            <img src="/api/placeholder/450/600"
+                            <img src="../resources/Before and after 01.jpg"
                                 alt="Pharmich team member inspecting pharmaceutical facility systems" class="case-img">
                         </div>
                     </div>
