--- a/services/industrial-cleaning.html
+++ b/services/industrial-cleaning.html
@@ -25,13 +25,13 @@
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180"
-        href="resources/Pharmich logo variants svg/favicon_io/apple-touch-icon.png">
+        href="../resources/Pharmich logo variants svg/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-        href="resources/Pharmich logo variants svg/favicon_io/favicon-32x32.png">
+        href="../resources/Pharmich logo variants svg/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-        href="resources/Pharmich logo variants svg/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="resources/Pharmich logo variants svg/favicon_io/site.webmanifest.json">
-    <link rel="mask-icon" href="resources/Pharmich logo variants svg/favicon_io/favicon.ico" color="#128C4C">
+        href="../resources/Pharmich logo variants svg/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../resources/Pharmich logo variants svg/favicon_io/site.webmanifest.json">
+    <link rel="mask-icon" href="../resources/Pharmich logo variants svg/favicon_io/favicon.ico" color="#128C4C">
     <meta name="msapplication-TileColor" content="#128C4C">
     <meta name="theme-color" content="#128C4C">
 </head>
@@ -93,9 +93,9 @@
         <header class="main-header">
             <div class="header-container">
                 <a href="home.html" class="logo">
-                    <img src="resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
+                    <img src="../resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
                         class="logo-img dark-mode-logo">
-                    <img src="resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
+                    <img src="../resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
                         class="logo-img light-mode-logo">
                 </a>
                 <nav class="main-nav" aria-label="Main">
@@ -266,11 +266,11 @@
                         </div>
                     </div>
                     <div class="service-hero-image">
-                        <img src="resources/pexels-tima-myflaws-6195951.jpg"
+                        <img src="../resources/pexels-tima-myflaws-6195951.jpg"
                             alt="Industrial cleaning technician using specialized equipment in manufacturing facility"
                             class="primary-image">
                         <div class="service-accent-image">
-                            <img src="resources/rsz_05.png" alt="Close-up of industrial cleaning equipment"
+                            <img src="../resources/rsz_05.png" alt="Close-up of industrial cleaning equipment"
                                 class="accent-image">
                         </div>
                     </div>
@@ -614,7 +614,7 @@
                             <div class="tab-pane active" id="automotive">
                                 <div class="tab-content-inner">
                                     <div class="tab-image">
-                                        <img src="resources/automotive-assembly-line-in-a-factory-assembly-line-of_25501019.jpg"
+                                        <img src="../resources/automotive-assembly-line-in-a-factory-assembly-line-of_25501019.jpg"
                                             alt="Automotive manufacturing facility being cleaned">
                                     </div>
                                     <div class="tab-info">
@@ -638,7 +638,7 @@
                             <div class="tab-pane" id="metal">
                                 <div class="tab-content-inner">
                                     <div class="tab-image">
-                                        <img src="resources/rsz_2cnc_cleaning.png"
+                                        <img src="../resources/rsz_2cnc_cleaning.png"
                                             alt="Metal fabrication facility being cleaned">
                                     </div>
                                     <div class="tab-info">
@@ -662,7 +662,7 @@
                             <div class="tab-pane" id="electronics">
                                 <div class="tab-content-inner">
                                     <div class="tab-image">
-                                        <img src="/api/placeholder/400/300"
+                                        <img src="../resources/Environmental Monitoring Tools .webp"
                                             alt="Electronics manufacturing facility being cleaned">
                                     </div>
                                     <div class="tab-info">
@@ -686,8 +686,7 @@
                             <div class="tab-pane" id="plastics">
                                 <div class="tab-content-inner">
                                     <div class="tab-image">
-                                        <img src="/api/placeholder/400/300"
-                                            alt="Plastics production facility being cleaned">
+                                        <img src="../resources/04.jpg" alt="Plastics production facility being cleaned">
                                     </div>
                                     <div class="tab-info">
                                         <h3>Plastics & Composites Production</h3>
@@ -709,7 +708,7 @@
                             <div class="tab-pane" id="equipment">
                                 <div class="tab-content-inner">
                                     <div class="tab-image">
-                                        <img src="/api/placeholder/400/300"
+                                        <img src="../resources/05.jpg"
                                             alt="Heavy equipment manufacturing facility being cleaned">
                                     </div>
                                     <div class="tab-info">
@@ -732,7 +731,7 @@
                             <div class="tab-pane" id="warehousing">
                                 <div class="tab-content-inner">
                                     <div class="tab-image">
-                                        <img src="/api/placeholder/400/300" alt="Warehousing facility being cleaned">
+                                        <img src="../resources/06.jpg" alt="Warehousing facility being cleaned">
                                     </div>
                                     <div class="tab-info">
                                         <h3>Industrial Warehousing</h3>
@@ -761,7 +760,7 @@
                 <div class="container">
                     <div class="story-container">
                         <div class="story-image">
-                            <img src="resources/Before and after 02.jpg"
+                            <img src="../resources/Before and after 02.jpg"
                                 alt="Manufacturing facility before and after cleaning">
                         </div>
                         <div class="story-content">
