--- a/services/specialized-sanitization.html
+++ b/services/specialized-sanitization.html
@@ -43,13 +43,13 @@
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180"
-        href="resources/Pharmich logo variants svg/favicon_io/apple-touch-icon.png">
+        href="../resources/Pharmich logo variants svg/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-        href="resources/Pharmich logo variants svg/favicon_io/favicon-32x32.png">
+        href="../resources/Pharmich logo variants svg/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-        href="resources/Pharmich logo variants svg/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="resources/Pharmich logo variants svg/favicon_io/site.webmanifest.json">
-    <link rel="mask-icon" href="resources/Pharmich logo variants svg/favicon_io/favicon.ico" color="#128C4C">
+        href="../resources/Pharmich logo variants svg/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../resources/Pharmich logo variants svg/favicon_io/site.webmanifest.json">
+    <link rel="mask-icon" href="../resources/Pharmich logo variants svg/favicon_io/favicon.ico" color="#128C4C">
     <meta name="msapplication-TileColor" content="#128C4C">
     <meta name="theme-color" content="#128C4C">
 </head>
@@ -82,9 +82,9 @@
         <header class="main-header">
             <div class="header-container">
                 <a href="home.html" class="logo">
-                    <img src="resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
+                    <img src="../resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
                         class="logo-img dark-mode-logo">
-                    <img src="resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
+                    <img src="../resources/Pharmich logo variants svg/Logo Variant 2 dark .svg" alt="Pharmich"
                         class="logo-img light-mode-logo">
                 </a>
                 <nav class="main-nav" aria-label="Main">
@@ -279,7 +279,7 @@
                         </div>
                         <div class="hero-visual">
                             <div class="hero-image-container">
-                                <img src="resources/pexels-tima-miroshnichenko-6200808.jpg"
+                                <img src="../resources/pexels-tima-miroshnichenko-6200808.jpg"
                                     alt="Specialized sanitization technician in cleanroom environment"
                                     class="hero-image">
                                 <div class="hero-badge">
@@ -328,7 +328,7 @@
                         <div class="overview-image">
                             <div class="image-circle"></div>
                             <div class="image-container">
-                                <img src="resources/pexels-tima-myflaws-6195951.jpg"
+                                <img src="../resources/pexels-tima-myflaws-6195951.jpg"
                                     alt="Specialized sanitization technician in cleanroom environment"
                                     class="overview-img">
                             </div>
@@ -385,7 +385,7 @@
                             <div class="tab-content active" id="healthcare-tab">
                                 <div class="tab-layout">
                                     <div class="tab-media">
-                                        <img src="resources/rsz_1vecteezy_premises-undergo-meticulous-disinfection-by-cleaning_30466057.png"
+                                        <img src="../resources/rsz_1vecteezy_premises-undergo-meticulous-disinfection-by-cleaning_30466057.png"
                                             alt="Healthcare facility sanitization" class="tab-image">
                                     </div>
                                     <div class="tab-info">
@@ -441,7 +441,7 @@
                             <div class="tab-content" id="cleanroom-tab">
                                 <div class="tab-layout">
                                     <div class="tab-media">
-                                        <img src="/api/placeholder/500/350" alt="Cleanroom decontamination services"
+                                        <img src="../resources/06.jpg" alt="Cleanroom decontamination services"
                                             class="tab-image">
                                     </div>
                                     <div class="tab-info">
@@ -497,8 +497,8 @@
                             <div class="tab-content" id="food-tab">
                                 <div class="tab-layout">
                                     <div class="tab-media">
-                                        <img src="/api/placeholder/500/350" alt="Food processing facility sanitization"
-                                            class="tab-image">
+                                        <img src="../resources/Safety & PPE Resources .webp"
+                                            alt="Food processing facility sanitization" class="tab-image">
                                     </div>
                                     <div class="tab-info">
                                         <h3>Food Processing Facility Sanitization</h3>
@@ -553,8 +553,8 @@
                             <div class="tab-content" id="pathogen-tab">
                                 <div class="tab-layout">
                                     <div class="tab-media">
-                                        <img src="/api/placeholder/500/350" alt="Pathogen and viral decontamination"
-                                            class="tab-image">
+                                        <img src="../resources/electrostatic sprayers.webp"
+                                            alt="Pathogen and viral decontamination" class="tab-image">
                                     </div>
                                     <div class="tab-info">
                                         <h3>Pathogen & Viral Decontamination</h3>
@@ -607,7 +607,7 @@
                             <div class="tab-content" id="laboratory-tab">
                                 <div class="tab-layout">
                                     <div class="tab-media">
-                                        <img src="/api/placeholder/500/350"
+                                        <img src="../resources/Environmental Monitoring Tools .webp"
                                             alt="Laboratory and research environment cleaning" class="tab-image">
                                     </div>
                                     <div class="tab-info">
@@ -662,8 +662,8 @@
                             <div class="tab-content" id="monitoring-tab">
                                 <div class="tab-layout">
                                     <div class="tab-media">
-                                        <img src="/api/placeholder/500/350" alt="Environmental monitoring systems"
-                                            class="tab-image">
+                                        <img src="../resources/Environmental Monitoring Tools .webp"
+                                            alt="Environmental monitoring systems" class="tab-image">
                                     </div>
                                     <div class="tab-info">
                                         <h3>Controlled Environment Monitoring</h3>
