--- a/services/sustainable-solutions.html
+++ b/services/sustainable-solutions.html
@@ -310,7 +310,8 @@
         </div>
         <div class="eco-hero-image">
           <div class="eco-image-container">
-            <img src="/api/placeholder/550/400" alt="Eco-friendly industrial cleaning in action" class="eco-img" />
+            <img src="../resources/Eco Friendly Industrial Cleaning.webp"
+              alt="Eco-friendly industrial cleaning in action" class="eco-img" />
             <div class="eco-image-badge">
               <div class="eco-badge-icon">
                 <i class="fas fa-award"></i>
@@ -355,8 +356,8 @@
 
         <div class="overview-video">
           <div class="video-container" id="overviewVideoContainer">
-            <img src="/api/placeholder/700/400" alt="Video thumbnail showing eco-friendly cleaning technologies"
-              class="video-thumbnail" />
+            <img src="../resources/cleaning team 01.png"
+              alt="Video thumbnail showing eco-friendly cleaning technologies" class="video-thumbnail" />
             <div class="eco-play-button" id="overviewVideoPlayButton">
               <i class="fas fa-play"></i>
               <span class="eco-play-text">Watch Video</span>
@@ -481,8 +482,8 @@
                   </div>
                 </div>
                 <div class="tab-content-image">
-                  <img src="/api/placeholder/450/350" alt="Green-certified cleaning products and methodologies"
-                    class="tab-img" />
+                  <img src="../resources/Eco Friendly Industrial Cleaning.webp"
+                    alt="Green-certified cleaning products and methodologies" class="tab-img" />
                   <div class="tab-badge">
                     <i class="fas fa-certificate"></i>
                     <span>Certified</span>
@@ -559,7 +560,8 @@
                   </div>
                 </div>
                 <div class="tab-content-image">
-                  <img src="/api/placeholder/450/350" alt="Water conservation technologies in action" class="tab-img" />
+                  <img src="../resources/cleaning team 01.png" alt="Water conservation technologies in action"
+                    class="tab-img" />
                   <div class="tab-badge">
                     <i class="fas fa-tint"></i>
                     <span>Water-Wise</span>
@@ -637,8 +639,8 @@
                   </div>
                 </div>
                 <div class="tab-content-image">
-                  <img src="/api/placeholder/450/350" alt="Chemical minimization equipment and technologies"
-                    class="tab-img" />
+                  <img src="../resources/Safety & PPE Resources .webp"
+                    alt="Chemical minimization equipment and technologies" class="tab-img" />
                   <div class="tab-badge">
                     <i class="fas fa-flask"></i>
                     <span>Low-Chem</span>
@@ -717,8 +719,8 @@
                   </div>
                 </div>
                 <div class="tab-content-image">
-                  <img src="/api/placeholder/450/350" alt="Air quality monitoring and improvement technologies"
-                    class="tab-img" />
+                  <img src="../resources/HEPA-filtered vacuum systems,.webp"
+                    alt="Air quality monitoring and improvement technologies" class="tab-img" />
                   <div class="tab-badge">
                     <i class="fas fa-wind"></i>
                     <span>Clean Air</span>
@@ -797,8 +799,8 @@
                   </div>
                 </div>
                 <div class="tab-content-image">
-                  <img src="/api/placeholder/450/350" alt="Waste reduction and recycling programs in action"
-                    class="tab-img" />
+                  <img src="../resources/Environmental Monitoring Tools .webp"
+                    alt="Waste reduction and recycling programs in action" class="tab-img" />
                   <div class="tab-badge">
                     <i class="fas fa-recycle"></i>
                     <span>Zero-Waste</span>
